--- a/footer.css
+++ b/footer.css
@@ -11,6 +11,8 @@ padding:1vw 0.5vw;
 #footext{
 color:white;
 margin-top:1vw;
+font-family:Raleway,sans-serif;
+font-size:1.5vw;
 }
 .socicon a:link
 {
