--- a/m_footer.css
+++ b/m_footer.css
@@ -7,13 +7,12 @@ box-sizing:border-box;
 .socicon{
 display:inline;
 padding:1vw 0.5vw;
-height:4vw;
 }
 #footext{
 color:white;
 margin-top:1vw;
 font-family:Raleway,sans-serif;
-font-size:1.5vw;
+font-size:2vh;
 }
 .socicon a:link
 {
@@ -21,7 +20,7 @@ text-decoration:none;
 }
 .socicon img
 {
-	height:4vw;
-
+	height:5vh;
+	
 	
 }
